--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body class='container center'>
   <h1>My favorite quotes:</h1>
+  <button id="sort-button">Sort By Author's First Name</button>
   <div>
     <ul id="quote-list">
     </ul>
@@ -20,11 +21,11 @@
     <form id="new-quote-form">
       <div class="form-group">
         <label for="new-quote">New Quote</label>
-        <input name="quote" type="text" class="form-control" id="new-quote" placeholder="Learn. Love. Code.">
+        <input name="quote" type="text" class="form-control" id="new-quote" placeholder="Quote">
       </div>
       <div class="form-group">
         <label for="Author">Author</label>
-        <input name="author" type="text" class="form-control" id="author" placeholder="Flatiron School">
+        <input name="author" type="text" class="form-control" id="author" placeholder="Author">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
